opam-version: "2.0"
name: "ocplib-json-typed-browser"
synopsis: "Json_repr interface over JavaScript's objects"
version: "0.7"
maintainer: "Benjamin Canou <benjamin@ocamlpro.com>"
authors: "Benjamin Canou <benjamin@ocamlpro.com>"
homepage: "https://github.com/ocamlpro/ocplib-json-typed"
bug-reports: "https://github.com/ocamlpro/ocplib-json-typed/issues"
license: "LGPLv3 w/ linking exception"
dev-repo: "git+https://github.com/ocamlpro/ocplib-json-typed.git"

build: [ "dune" "build" "-j" jobs "-p" name "@install" ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0.1"}
  "ocplib-json-typed" {= "0.7" }
  "js_of_ocaml" {>= "3.3.0"}
]
