opam-version: "2.0"
name: "ocplib-json-typed-browser"
synopsis: "Libraries for reliable manipulation JSON objects (browser support)"
version: "dev"
maintainer: "Benjamin Canou <benjamin@ocamlpro.com>"
authors: "Benjamin Canou <benjamin@ocamlpro.com>"
homepage: "https://github.com/ocamlpro/ocplib-json-typed"
bug-reports: "https://github.com/ocamlpro/ocplib-json-typed/issues"
license: "LGPLv3 w/ linking exception"
dev-repo: "git+https://github.com/ocamlpro/ocplib-json-typed.git"

build: [
  ["dune" "build" "-j" jobs "-p" name "@install"]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.7"}
  "ocplib-json-typed" {= "dev" }
  "js_of_ocaml" {>= "3.3.0"}
]
