opam-version: "2.0"
name: "ocplib-json-typed"
synopsis: "Type-aware JSON and JSON schema utilities"
version: "0.7.1"
maintainer: "Benjamin Canou <benjamin@ocamlpro.com>"
authors: "Benjamin Canou <benjamin@ocamlpro.com>"
homepage: "https://github.com/ocamlpro/ocplib-json-typed"
bug-reports: "https://github.com/ocamlpro/ocplib-json-typed/issues"
license: "LGPLv3 w/ linking exception"
dev-repo: "git+https://github.com/ocamlpro/ocplib-json-typed.git"

build: [ "dune" "build" "-j" jobs "-p" name "@install" "@runtest" {with-test} ]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0.1"}
  "uri" {>= "1.9.0" }
]
